app-of-apps/delta/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delta-landing
  namespace: delta
  labels:
    app: delta-landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delta-landing
  template:
    metadata:
      labels:
        app: delta-landing
    spec:
      containers:
      - name: delta-landing
        image: europe-west1-docker.pkg.dev/appointy-global/common/delta-landing:v10
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      imagePullSecrets:
      - name: artifact-registry
