app-of-apps/delta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delta-landing
  namespace: delta
  labels:
    app: delta-landing
spec:
  selector:
    app: delta-landing
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
