app-of-apps/delta/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: delta-landing
  namespace: delta
spec:
  hosts:
  - delta-landing.idp.appointy.com
  gateways:
  - istio-system/gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: delta-landing
        port:
          number: 80
